# baba-is-auto

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  appveyor.yml  setup.py  sonar-project.properties
.github/workflows/: macos.yml  semgrep.yml  ubuntu-codecov.yml  ubuntu-sonarcloud.yml  ubuntu.yml  windows.yml
CMake/: CompileOptions.cmake
Extensions/BabaGUI/: action.txt  config.py  images.py  main.py  sprite_loader.py  sprites.py
Extensions/BabaPython/: CMakeLists.txt  main.cpp
Extensions/BabaRL/: DQN.py  REINFORCE.py  environment.py  rendering.py  sprites.py
Extensions/BabaRL/baba-babaisyou-v0/: DQN.py  REINFORCE.py  environment.py  rendering.py
Extensions/BabaRL/baba-outofreach-v0/: DQN.py  REINFORCE.py  environment.py  rendering.py  sprites.py
Includes/: Test.hpp
Includes/baba-is-auto/: baba-is-auto.hpp
Resources/Maps/: BabaIsYou.txt  off_limits.txt  off_limits_bug.txt  out_of_reach.txt  simple_map.txt  volcano.txt
Scripts/: Dockerfile.cosmic  Dockerfile.disco  Dockerfile.disco.clang-latest  Dockerfile.disco.gcc-latest  Dockerfile.focal  azure_pipelines_build_linux.yml  azure_pipelines_build_macos.yml  azure_pipelines_build_windows_vs2017.yml  azure_pipelines_build_windows_vs2019.yml  header_gen.py  travis_build.sh  travis_build_docker.sh  utils.py
Sources/: CMakeLists.txt  Test.cpp
Sources/baba-is-auto/: CMakeLists.txt  Test.cpp
Tests/PythonTests/: test_game.py  test_map.py  test_rule_manager.py
Tests/UnitTests/: CMakeLists.txt  RuleTest.cpp  SimpleTest.cpp  UnitTests.cpp
(+54 files in other folders)
